# goldchain

./: .dockerignore  .gitignore  Dockerfile  README.Docker.md  compose.yml  docker-compose.yml  dump.ts  generate-account.ts  package-lock.json  package.json  test-polkadot-integration.ts  test-polkadot-mock.ts  test-polkadot.ts  tests-polkadot.ts  tsconfig.json
contracts/goldchain_contract/: .gitignore  Cargo.toml  lib.rs
seed/: index.ts
src/: index.ts
src/internals/adapters/: index.ts
src/internals/adapters/account/: index.ts  schema.ts
src/internals/adapters/admin/: index.ts  schema.ts
src/internals/adapters/blockchain/: blockchain.polkadot.ts  goldchain_sc.json
src/internals/adapters/chat/: index.ts  schema.ts
src/internals/adapters/escrow/: escrow.ts
src/internals/adapters/ledger/: index.ts  schema.ts
src/internals/ports/: ports.ts
src/internals/services/: index.ts
src/package/configs/: environment.ts
src/package/errors/: customError.ts
src/package/middleware/: authorization.ts  errorHandler.ts  invalidRoute.ts  morgan.ts  permission.ts  validation.ts
src/package/responses/: error.ts  success.ts
src/package/types/: ID.ts  cookies.d.ts  express.d.ts  filter.d.ts  payload.d.ts  status.ts
src/package/utils/: connections.ts  encryption.ts  generate.ts  multer.ts  pgQuery.ts  time.ts  zod.ts
src/package/view/: acccountSetupMail.ts  emailVerified.ts  forgotPassword.ts  offer.ts  purchaseRequest.ts  requestAccepted.ts  requestRejected.ts  resetPasswordOTP.ts  sendAccountNote.ts  sendAccountStatus.ts  sendAdminCredential.ts  sendOTP.ts
(+144 files in other folders)
